[package]
name = "cdasim"
version = "0.1.0"
authors = ["Erik Brinkman <erik.brinkman@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/erikbrinkman/cdasim"
repository = "https://github.com/erikbrinkman/cdasim"
license = "MIT"
description = "A fast simulator of a simple CDA or call market"

[badges]
travis-ci = { repository = "erikbrinkman/cdasim" }

[dependencies]
clap = "^2.32.0"
rand = "^0.5.4"
serde = "^1.0.70"
serde_derive = "^1.0.70"
serde_json = "^1.0.22"
