[package]
name = "cdasim"
version = "0.1.1"
authors = ["Erik Brinkman <erik.brinkman@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/erikbrinkman/cdasim"
repository = "https://github.com/erikbrinkman/cdasim"
license = "MIT"
description = "A fast simulator of a simple CDA or call market"
edition = "2021"

[dependencies]
clap = { version = "^3.2", features = ["derive"] }
rand = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
